rhdlc/test/compile-fail/scope/use-crate-name-from-mod/expected.txt
error: unresolved import `a`
 --> top.rhdl:2:8
  |
2 |     use crate::a;
  |         ^^^^^^^^ no `a` in `crate`
